on firefox 88 the first element (the one next to the title) no longer displays the top border

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -71,7 +71,7 @@ body {
   color: var(--link-key-color, #333);
   border: 1px solid #b4b4b4;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
-  font-size: 1.1em;
+  font-size: 0.9em;
   font-weight: 700;
   line-height: 1;
   padding: 0 4px;
